--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,1 +1,6 @@
-/* TODO Add site wide styles */
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Montserrat:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
